--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 attrs==23.1.0
 beautifulsoup4==4.12.2
+black==23.12.1
 blosc2==2.0.0
+build==1.0.3
 cdsapi==0.6.1
 certifi==2023.7.22
 cffi==1.15.1
@@ -27,19 +29,24 @@ lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.7.2
 msgpack==1.0.5
+mypy-extensions==1.0.0
 numexpr==2.8.4
 numpy==1.24.3
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.1
+pathspec==0.12.1
 Pillow==10.0.0
+platformdirs==4.1.0
 py-cpuinfo==9.0.0
 pyarrow==12.0.1
 pycodestyle==2.11.0
 pycparser==2.21
 pyparsing==3.0.9
 pyproj==3.6.0
+pyproject_hooks==1.0.0
 python-dateutil==2.8.2
+python-docx==1.1.0
 pytz==2023.3
 requests==2.31.0
 shapely==2.0.1
@@ -47,6 +54,7 @@ six==1.16.0
 soupsieve==2.4.1
 tables==3.8.0
 tqdm==4.65.0
+typing_extensions==4.9.0
 tzdata==2023.3
 urllib3==2.0.4
 xarray==2023.7.0
