--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'ETS_CookBook'
-version = '1.0.9'
+version = '1.0.9.a'
 authors = [
   { name='Omar Usmani', email='Omar.Usmani@TNO.nl' },
 ]
