--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pandas==2.0.1
 pathspec==0.12.1
 Pillow==10.0.0
 platformdirs==4.1.0
+plotly==5.22.0
 py-cpuinfo==9.0.0
 pyarrow==12.0.1
 pycodestyle==2.11.0
@@ -53,6 +54,7 @@ shapely==2.0.1
 six==1.16.0
 soupsieve==2.4.1
 tables==3.8.0
+tenacity==8.2.3
 tqdm==4.65.0
 typing_extensions==4.9.0
 tzdata==2023.3
