--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ docx==0.2.4
 et-xmlfile==1.1.0
 fonttools==4.53.0
 geopandas==1.0.1
+ghp-import==2.1.0
 idna==3.7
 importlib_metadata==8.0.0
 iniconfig==2.0.0
@@ -21,10 +22,14 @@ Jinja2==3.1.4
 keyring==25.2.1
 kiwisolver==1.4.5
 lxml==5.2.2
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.0
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-get-deps==0.2.0
 more-itertools==10.3.0
 mypy==1.10.1
 mypy-extensions==1.0.0
@@ -50,6 +55,8 @@ python-dateutil==2.9.0.post0
 python-docx==1.1.2
 pytz==2024.1
 pywin32-ctypes==0.2.2
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
 readme_renderer==43.0
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -65,5 +72,6 @@ types-requests==2.32.0.20240622
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+watchdog==4.0.1
 xarray==2024.6.0
 zipp==3.19.2
