--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dynamic = ['dependencies']
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
 
+[tool.pytest.ini_options]
+pythonpath = ['src/ETS_CookBook']
+
 
 [project.urls]
 'Homepage' = 'https://github.com/TNO/ETS_CookBook'
