New attenpt at CI

--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -1,9 +1,7 @@
 name: GitHyub Workflow
 run-name: Running the workflow
 on: [push]
-stages:
-  - test
-test:
-  stage: test
-  script: 
-    - pytest
+jobs:
+  testing:
+  steps:
+    - run: pytest
