--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -8,7 +8,7 @@ jobs:
       CONFIG_FILE: folder/mkdocs.yml
     steps:
       - run: pip install mkdocs
-      - working-directory: ./docs
+      - working-directory: \docs\
         run: mkdocs gh-deploy
 
     # Testing:
