--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -4,11 +4,12 @@ jobs:
 
   Publish_documentation:
     runs-on: ubuntu-latest
-    env:
-      CONFIG_FILE: mkdocs.yml
+    # env:
+      # CONFIG_FILE: mkdocs.yml
     steps:
       - run: pip install mkdocs
-      - run: mkdocs gh-deploy
+      # - working-directory: ./
+       -run: mkdocs gh-deploy
 
     # Testing:
     # runs-on: windows-latest
