--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -4,10 +4,12 @@ jobs:
 
   Publish_documentation:
     runs-on: ubuntu-latest
+    env:
+      CONFIG_FILE: mkdocs.yml
     steps:
       - run: pip install mkdocs
       # - working-directory: ./
-       -run: mkdocs gh-deploy
+      #  -run: mkdocs gh-deploy
 
     # Testing:
     # runs-on: windows-latest
