--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -8,8 +8,9 @@ jobs:
       CONFIG_FILE: mkdocs.yml
     steps:
       - run: pip install mkdocs
-      - working-directory: ./docs
-        run: mkdocs gh-deploy
+      - run: ls
+      # - working-directory: ./docs
+        # run: mkdocs gh-deploy
 
     # Testing:
     # runs-on: windows-latest
