SOme more type hinting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'ETS_CookBook'
-version = '1.0.24'
+version = '1.0.25'
 authors = [
   { name='Omar Usmani', email='Omar.Usmani@TNO.nl' },
 ]
@@ -28,7 +28,7 @@ dependencies = {file = ['requirements.txt']}
 'ETS_CookBook' = ['py.typed']
 
 [tool.setuptools.packages.find]
-where = ['src/ETS_CookBook']
+where = ['src']
 
 [tool.pytest.ini_options]
 pythonpath = ['src/ETS_CookBook']
