--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ nav:
   - Home: index.md
   - Plotting:
     - Make spider chart: make_spider_chart.md
-    - Map grid: map_grid.
+    - Map grid: map_grid.md
     - Make quantity map: make_quantity_map.md
     - Put plots on map: put_plots_on_map.md
     - Make Sankey: make_sankey.md
@@ -16,7 +16,7 @@ nav:
     - Put plots on map: put_plots_on_map.md
   - Office documents:
     - DataFrame to Excel: dataframe_to_Excel.md
-    - DataFrame from Excel table name: dataframe_from_Excel_table_name
+    - DataFrame from Excel table name: dataframe_from_Excel_table_name.md
     - Put DataFRame in Word document: put_dataframe_in_word_document.md
     - Make cell text vertical: make_cell_text_vertical.md
     - Delete Word element: delete_word_element.md
@@ -31,11 +31,11 @@ nav:
     - DataFrames from query list: dataframes_from_query_list.md
     - Read query generator: read_query_generator.md
     - Database tables columns: database_tables_columns.md
-    - Update database table: update_database_table.
+    - Update database table: update_database_table.md
     - Read table from database: read_table_from_database.md
   - File Management:
     - Parameters from TOML: parameters_from_TOML.md
-    - Check if folder exists: check_if_folder_exists.
+    - Check if folder exists: check_if_folder_exists.md
     - Save figure: save_figure.md
     - Save DataFrame: save_dataframe.md
     - From grub to DataFrame: from_grib_to_dataframe.md
@@ -45,7 +45,7 @@ nav:
     - Get RGB from name: get_RGB_from_name.md
     - RGB color list: rgb_color_list.md
     - Register color bars: register_color_bars.md
-    - RGBA code color: rgba_code_color
+    - RGBA code color: rgba_code_color.md
 
 
 theme: 
