--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-black==24.4.2
+black==24.10.0
 build==1.2.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
@@ -13,7 +13,7 @@ ETS_CookBook==1.0.25
 fonttools==4.53.0
 geopandas==1.0.1
 ghp-import==2.1.0
-idna==3.7
+idna==3.10
 importlib_metadata==8.0.0
 iniconfig==2.0.0
 jaraco.classes==3.4.0
@@ -42,12 +42,13 @@ pandas==2.2.2
 pandas-stubs==2.2.2.240603
 pathspec==0.12.1
 pillow==10.4.0
+pip-review==1.3.0
 pkginfo==1.10.0
 platformdirs==4.2.2
 plotly==5.22.0
 pluggy==1.5.0
 Pygments==2.18.0
-pyogrio==0.9.0
+pyogrio==0.10.0
 pyparsing==3.1.2
 pyproj==3.6.1
 pyproject_hooks==1.1.0
@@ -66,7 +67,7 @@ rich==13.7.1
 shapely==2.0.4
 six==1.16.0
 tenacity==8.4.2
-twine==5.1.1
+tomli==2.0.1
 types-openpyxl==3.1.5.20240630
 types-pytz==2024.1.0.20240417
 types-requests==2.32.0.20240622
