--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = 'setuptools.build_meta'
 
 
 [project]
-Name = 'ETS_CookBook'
-Version = '1.1.1'
+name = 'ETS_CookBook'
+version = '1.1.2'
 authors = [
   { name='Omar Usmani', email='Omar.Usmani@TNO.nl' },
 ]
