--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy>=2.1.3
 openpyxl>=3.1.5
 pandas>=2.2.3
 plotly>=5.24.1
+python-box>=7.3.2
 python-docx>=1.1.2
 requests>=2.32.3
 xarray>=2024.10.0
